...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:hint="0"
            android:setTextViewVisibility="@{viewModel.showHistory}"
            android:text="@{viewModel.text.toString()}"
...
        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:background="#ddd"
            app:layout_constraintBottom_toTopOf="@id/buttonDelete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDelete"
            style="@style/Widget.Calculator.Button.Icon"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewModel.addTerm(7)}"
                android:text="@string/calculator_7" />

            <Button
                android:id="@+id/button8"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewModel.addTerm(8)}"
                android:text="@string/calculator_8" />

            <Button
                android:id="@+id/button9"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewModel.addTerm(9)}"
                android:text="@string/calculator_9" />

            <Button
                android:id="@+id/buttonDivide"
                style="@style/Widget.Calculator.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewModel.addTerm(Operator.DIVIDE)}"
                android:text="@string/calculator_divide" />

...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewModel.addTerm(6)}"
                android:text="@string/calculator_6" />

            <Button
                android:id="@+id/buttonMultiply"
                style="@style/Widget.Calculator.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewModel.addTerm(Operator.MULTIPLY)}"
                android:text="@string/calculator_multiply" />

            <Button
                android:id="@+id/button1"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewModel.addTerm(1)}"
                android:text="@string/calculator_1" />

            <Button
                android:id="@+id/button2"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewModel.addTerm(2)}"
                android:text="@string/calculator_2" />

            <Button
                android:id="@+id/button3"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewModel.addTerm(3)}"
                android:text="@string/calculator_3" />

            <Button
                android:id="@+id/buttonMinus"
                style="@style/Widget.Calculator.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewModel.addTerm(Operator.SUBTRACT)}"
                android:text="@string/calculator_minus" />

...
            <Space
                android:id="@+id/space1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/buttonEquals"
                style="@style/Widget.Calculator.Button.BackgroundColored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewModel.calculate()}"
                android:text="@string/calculator_equals" />

            <Button
                android:id="@+id/buttonPlus"
                style="@style/Widget.Calculator.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewModel.addTerm(Operator.ADD)}"
                android:text="@string/calculator_plus" />
        </GridLayout>
...
